tests/fixtures/negative/potential-bugs/InvalidRange.kt
package fixtures.negative.potentialbugs

class InvalidRange {
    fun example() {
        for (i in 1..10) {
            println(i)
        }
    }
}
